    * 8665 FIX: fixed aborted snmp scan because of werk #8664...
    * 8666 FIX: added more detected APs to aironet_clients
    * 4489 FIX: check_mk_agent.linux: Fixed group option, ie. newer ipmi-sensors versions have a different group option, thus the section was empty.
    * 4491 FIX: logwatch.groups: Fixed inconsistency of service description which now begins with 'Log' instead of 'LOG'...

    Multisite:
    * 4400 FIX: Fixed possible random "OSError: [Errno 9] Bad file descriptor" in GUI...
    * 4404 FIX: FIX Logwatch problematic logfiles list was showing too many logfiles...

    HW/SW-Inventory:
    * 4385 FIX: mk_inventory.vbs: Add new query type for installed software on hosts...
    * 8667 FIX: fixed missing patchlevel in inventory data of SuSE 12.1 and 12.2...


1.2.8p18:
    Checks & Agents:
    * 4189 FIX: mem.used: Fixed graphing...
    * 4190 FIX: mssql_blocked_sessions: Fixed unknown states if only one session is blocked...
    * 4192 FIX: df: Fixed handling of incomplete information about inodes...
    * 4359 FIX: mssql_counters: ignore invalid lines
    * 4374 FIX: check_sql: Fixed exception in verbose mode when querying MSSQL...
    * 4375 FIX: check_sql: Fixed reporting configuration issues to monitoring core...
    * 4406 FIX: Fixed some invalid keyword arguments in check_info declarations...
    * 4407 FIX: df: fixed handling of paths including spaces
    * 4408 FIX: checkpoint_temp, checkpoint_fan, checkpoint_voltage: fixed status and value handling
    * 4349 FIX: cisco_qos: Fix crashing check for some cases where the QoS class cannot be found...
    * 4409 FIX: uptime: fixed missing info handling
    * 4410 FIX: brocade_fcport: fixed missing info handling
    * 4196 FIX: blade_blades: fixed out of range state...
    * 4412 FIX: haproxy.server: fixed empty uptime info handling
    * 4413 FIX: mem.linux: handle empty info
    * 4414 FIX: oracle_rman: fixed UnboundLocalError if sid level 0 is empty
    * 4415 FIX: blade_bays: fixed KeyError