@@ -1,0 +1,9 @@
+Title: mk_oracle.ps1: Now takes version into account which fixed wrong calculation of tablespaces and fixed missing possibility of wallet configuration
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p19
+Date: 1489387869
+Class: fix
+
+
