@@ -54,7 +54,7 @@
 #   |                    \____\___/|_| |_|_| |_|\__, |                     |
 #   |                                           |___/                      |
 #   +----------------------------------------------------------------------+
-#   | The user can override and set variables in mk_oracle_cfg.ps1             |
+#   | The user can override and set variables in mk_oracle_cfg.ps1         |
 #   '----------------------------------------------------------------------'
 
 
@@ -123,7 +123,8 @@ Param(
 )
      # if debug=1 then output
      if ($DEBUG -gt 0) {
-          echo "DEBUG:${error_message}"
+          $MYTIME=Get-Date -Format o
+          echo "${MYTIME} DEBUG:${error_message}"
      }
 }
 
@@ -384,11 +385,17 @@ Param(
                else {
                     $assysdbaconnect=""
                }
-               #$TNSALIAS="$the_host`:$the_port/$sqlsid"
                $UPPER_SID=$sqlsid.toupper()
-               $TNSALIAS="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=$the_host)(PORT=$the_port))(CONNECT_DATA=(SID=$UPPER_SID)))"
-               # we presume we can use an EZconnect
-               $SQL_CONNECT="$the_user/$the_password@$TNSALIAS$assysdbaconnect"
+
+               # use oracle wallet if requested in cfg file
+               if ($the_user -like "/" ) {
+                    $SQL_CONNECT="/@$UPPER_SID$assysdbaconnect"
+               }
+               else {
+                    $TNSALIAS="(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=$the_host)(PORT=$the_port))(CONNECT_DATA=(SID=$UPPER_SID)))"
+                    # we presume we can use an EZconnect
+                    $SQL_CONNECT="$the_user/$the_password@$TNSALIAS$assysdbaconnect"
+               }
                debug_echo "value of sql_connect in dbuser = $SQL_CONNECT"
           } else {
                debug_echo "DBUSER is not defined"
@@ -606,10 +613,12 @@ Function sql_tablespaces {
                   ||'|'|| ONLINE_STATUS ||'|'|| BLOCK_SIZE
                   ||'|'|| decode(tstatus,'READ ONLY', 'READONLY', tstatus) || '|' || free_blocks
                   ||'|'|| contents
+                  ||'|'|| iversion
            from v$database d , (
                     select f.file_name, f.tablespace_name, f.status fstatus, f.AUTOEXTENSIBLE,
                     f.blocks, f.maxblocks, f.USER_BLOCKS, f.INCREMENT_BY,
-                    f.ONLINE_STATUS, t.BLOCK_SIZE, t.status tstatus, nvl(sum(fs.blocks),0) free_blocks, t.contents
+                    f.ONLINE_STATUS, t.BLOCK_SIZE, t.status tstatus, nvl(sum(fs.blocks),0) free_blocks, t.contents,
+                    (select version from v$instance) iversion
                     from dba_data_files f, dba_tablespaces t, dba_free_space fs
                     where f.tablespace_name = t.tablespace_name
                     and f.file_id = fs.file_id(+)
@@ -619,7 +628,8 @@ Function sql_tablespaces {
                     UNION
                     select f.file_name, f.tablespace_name, f.status, f.AUTOEXTENSIBLE,
                     f.blocks, f.maxblocks, f.USER_BLOCKS, f.INCREMENT_BY, 'TEMP',
-                    t.BLOCK_SIZE, t.status, sum(sh.blocks_free) free_blocks, 'TEMPORARY'
+                    t.BLOCK_SIZE, t.status, sum(sh.blocks_free) free_blocks, 'TEMPORARY',
+                    (select version from v$instance) version
                     from v$thread th, dba_temp_files f, dba_tablespaces t, v$temp_space_header sh
                     WHERE f.tablespace_name = t.tablespace_name and f.file_id = sh.file_id
                     GROUP BY th.instance, f.file_name, f.tablespace_name, f.status,
@@ -1269,7 +1279,7 @@ $list_inst=(get-service -Name "Oracle*Service*" -include "OracleService*", "Orac
 # the following line ensures that the output of the files generated by calling
 # Oracle SQLplus through Powershell are not limited to 80 character width. The
 # 80 character width limit is the default
-$Host.UI.RawUI.BufferSize = New-Object Management.Automation.Host.Size (512, 50)
+$Host.UI.RawUI.BufferSize = New-Object Management.Automation.Host.Size (512, 150)
 
 # We have to set some value for the ORACLE_SID, although here a nonsense value
 # This value is used when we want to simply list all the banners
@@ -1420,6 +1430,10 @@ if ($the_count -gt 0) {
                }
           }
      }
+     # We need an line break after last output from sections
+     # otherwise the agent adds <<<local>>> as parameter to the last line of plugin
+     echo ""
+
 }
 debug_echo "got to the end"
 
