@@ -9,6 +9,7 @@
     * 8666 FIX: added more detected APs to aironet_clients
     * 4489 FIX: check_mk_agent.linux: Fixed group option, ie. newer ipmi-sensors versions have a different group option, thus the section was empty.
     * 4491 FIX: logwatch.groups: Fixed inconsistency of service description which now begins with 'Log' instead of 'LOG'...
+    * 4492 FIX: mk_oracle.ps1: Now takes version into account which fixed wrong calculation of tablespaces and fixed missing possibility of wallet configuration
 
     Multisite:
     * 4400 FIX: Fixed possible random "OSError: [Errno 9] Bad file descriptor" in GUI...
